tests/miniJava/neg/001465_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new int public int [] java ( ) { return 0 ; } [ 0 ] ; } }
